--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scroll": "^1.8.9",
     "react-spring": "^9.7.2",
